added lines in Dockerfile of jenkins-master, to install maven into the image

--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -1,3 +1,6 @@
 FROM jenkins 
 COPY plugins.txt /plugins.txt 
 RUN /usr/local/bin/plugins.sh /plugins.txt 
+USER root
+RUN apt-get update; apt-get install -y maven
+USER jenkins
