--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ jenkinsmaster:
  image: yinglei/jenkinsci
  environment:
    JAVA_OPTS: "-Djava.awt.headless=true"
+ volumes:
+   - /var/jenkins_home
  ports:
    - "50000:50000"
    - "8080:8080"
