--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ jenkinsmaster:
    JAVA_OPTS: "-Djava.awt.headless=true"
  volumes:
    - /var/jenkins_home
+ extra_hosts:
+   myhost: 172.17.42.1
  ports:
    - "50000:50000"
    - "8080:8080"
